--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,6 @@
 @charset "utf-8";
+
+
+body{
+    font-family: "Noto Sans JP", "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
+}
