--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,15 @@ body{
 }
 
 /* section */
-.section{}
-.section-headline{}
+.section{
+    padding: 30px 15px;
+}
+.section-headline{
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    margin: 0 0 40px;
+}
 
 /* about */
 .about{}
